<?xml version="1.0"?>
<package format="2">
  <name>rnrt_control_tools</name>
  <version>0.0.1</version>
  <description>Control tools for RN ROS Toolbox</description>

  <maintainer email="rinat.nazarovv@gmail.com">Rinat Nazarov</maintainer>
  <author email="rinat.nazarovv@gmail.com">Rinat Nazarov</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>angles</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>polled_camera</depend>
  <depend>rosconsole</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>moveit_msgs</depend>
  <depend>rrt_srvs</depend>
  <depend>control_toolbox</depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <!-- <gazebo plugin_path="${prefix}/lib" /> -->
  </export> 
</package>
